# http_log_monitoring

./: .gitignore  CMakeLists.txt  README.md  output_example.txt
data/: sample_small.txt
doc/: ouput_example.txt
src/: Alert.h  Alerts.h  Buffer.h  Parser.h  main.cpp
test/: AlertTest.cpp  BufferTest.cpp  ParserTest.cpp
